--- a/layouts/partials/widget/archives.html
+++ b/layouts/partials/widget/archives.html
@@ -7,25 +7,15 @@
     <div class="widget-icon">{{ partial "helper/icon" "infinity" }}</div>
     <h2 class="widget-title section-title">{{ T "widget.archives.title" }}</h2>
 
-    {{ $pages := where $context.Site.RegularPages "Type" "in"
-      $context.Site.Params.mainSections
-    }}
-    {{ $notHidden := where
-      $context.Site.RegularPages "Params.hidden" "!=" true
-    }}
-    {{ $filtered :=
-      ($pages | intersect $notHidden)
-    }}
-    {{ $archives := $filtered.GroupByDate
-      "2006"
-    }}
+    {{ $pages := where $context.Site.RegularPages "Type" "in" $context.Site.Params.mainSections }}
+    {{ $notHidden := where $context.Site.RegularPages "Params.hidden" "!=" true }}
+    {{ $filtered := ($pages | intersect $notHidden) }}
+    {{ $archives := $filtered.GroupByDate "2006" }}
 
 
     <div class="widget-archive--list">
       {{ range $index, $item := first (add $limit 1) ($archives) }}
-        {{- $id :=
-          lower (replace $item.Key " " "-")
-        -}}
+        {{- $id := lower (replace $item.Key " " "-") -}}
         <div class="archives-year">
           <a href="{{ $archivesPage.RelPermalink }}#{{ $id }}">
             {{ if eq $index $limit }}
@@ -40,7 +30,5 @@
     </div>
   </section>
 {{- else -}}
-  {{- warnf "Archives page not found. Create a page with
-    layout:archives."
-  -}}
+  {{- warnf "Archives page not found. Create a page with layout:archives." -}}
 {{- end -}}
