--- a/layouts/partials/widget/archives.html
+++ b/layouts/partials/widget/archives.html
@@ -10,7 +10,7 @@
     {{ $pages := where $context.Site.RegularPages "Type" "in" $context.Site.Params.mainSections }}
     {{ $notHidden := where $context.Site.RegularPages "Params.hidden" "!=" true }}
     {{ $filtered := ($pages | intersect $notHidden) }}
-    {{ $archives := $filtered.GroupByDate "2006" }}
+    {{ $archives := $filtered.GroupByDate "2006 January" }}
 
 
     <div class="widget-archive--list">
