--- a/layouts/partials/comments/provider/giscus.html
+++ b/layouts/partials/comments/provider/giscus.html
@@ -1,20 +1,20 @@
 {{- with .Site.Params.comments.giscus -}}
-<script
-    src="https://giscus.app/client.js"
-    data-repo="{{- .repo -}}"
-    data-repo-id="{{- .repoID -}}"
-    data-category="{{- .category -}}"
-    data-category-id="{{- .categoryID -}}"
-    data-mapping="{{- default `title` .mapping -}}"
-    data-strict="{{- default 0 .strict -}}"
-    data-reactions-enabled="{{- default 1 .reactionsEnabled -}}"
-    data-emit-metadata="{{- default 0 .emitMetadata -}}"
-    data-input-position="{{- default `top` .inputPosition -}}"
-    data-theme="{{- default `light` .lightTheme -}}"
-    data-lang="{{- default `en` .lang -}}"
-    crossorigin="anonymous"
-    async
-></script>
+    <script
+        src="https://giscus.app/client.js"
+        data-repo="{{- .repo -}}"
+        data-repo-id="{{- .repoID -}}"
+        data-category="{{- .category -}}"
+        data-category-id="{{- .categoryID -}}"
+        data-mapping="{{- default `title` .mapping -}}"
+        data-strict="{{- default 0 .strict -}}"
+        data-reactions-enabled="{{- default 1 .reactionsEnabled -}}"
+        data-emit-metadata="{{- default 0 .emitMetadata -}}"
+        data-input-position="{{- default `top` .inputPosition -}}"
+        data-theme="preferred_color_scheme"
+        data-lang="{{- default `en` .lang -}}"
+        crossorigin="anonymous"
+        async
+    ></script>
 <script>
     function setGiscusTheme(theme) {
         let giscus = document.querySelector("iframe.giscus-frame");
