--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -1,21 +1,31 @@
-<meta charset='utf-8'>
-<meta name='viewport' content='width=device-width, initial-scale=1'>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 
+<meta
+    name="google-site-verification"
+    content="4YIay4pRVcd5YBW9-bykDkXUXtQFz3qeKc5tHkOO4ak"
+/>
 {{- $description := partialCached "data/description" . .RelPermalink -}}
-<meta name='description' content='{{ $description }}'>
-{{ with .Params.Keywords }}<meta name="keywords" content="{{ delimit . ", " }}">{{ end }}
+<meta name="description" content="{{ $description }}" />
+{{ with .Params.Keywords }}
+    <meta name="keywords" content="{{ delimit . ", " }}" />
+{{ end }}
 
 {{- $title := partialCached "data/title" . .RelPermalink -}}
 <title>{{ $title }}</title>
 
-<link rel='canonical' href='{{ .Permalink }}'>
+<link rel="canonical" href="{{ .Permalink }}" />
 
 {{- partial "head/style.html" . -}}
 {{- partial "head/script.html" . -}}
 {{- partial "head/opengraph/include.html" . -}}
 
 {{- range .AlternativeOutputFormats -}}
-    <link rel="{{ .Rel }}" type="{{ .MediaType.Type }}" href="{{ .Permalink | safeURL }}">
+    <link
+        rel="{{ .Rel }}"
+        type="{{ .MediaType.Type }}"
+        href="{{ .Permalink | safeURL }}"
+    />
 {{- end -}}
 
 {{ with .Site.Params.favicon }}
